# alpha-pm

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
src/: __init__.py  config.py  main.py
src/agents/: __init__.py  ai_analyst.py  arb_detector.py  base.py  copy_monitor.py  orchestrator.py  risk_manager.py
src/data/: __init__.py  database.py  models.py
src/execution/: __init__.py  base.py  kalshi.py  polymarket.py
src/utils/: logging.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_trading_engine.py
tests/unit/: __init__.py  test_kalshi_executor.py  test_risk_manager.py
