[project]
name = "alpha-pm"
version = "0.1.0"
description = "Autonomous AI-powered prediction market trading platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "BrickDataLab" }
]
keywords = ["prediction-markets", "trading", "ai", "kalshi", "polymarket", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    # Core async
    "asyncio>=3.4",
    "httpx>=0.26",

    # Data validation
    "pydantic>=2.5",
    "pydantic-settings>=2.1",

    # MongoDB
    "motor>=3.3",
    "pymongo>=4.6",

    # Redis
    "redis>=5.0",

    # Polymarket
    "py-clob-client>=0.1",

    # Kalshi auth (RSA signing)
    "cryptography>=42.0",
    "pycryptodome>=3.20",

    # AI
    "anthropic>=0.40",

    # Monitoring & Logging
    "structlog>=24.0",

    # Utilities
    "python-dotenv>=1.0",
    "python-dateutil>=2.8",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "black>=24.0",
    "ruff>=0.2",
    "mypy>=1.8",
    "pre-commit>=3.6",
]

[project.scripts]
alpha-pm = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
